--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,5 @@
 body {
-
-  background-color:aqua;
-
+  background-color: aqua;
 }
 
 select.form-control,
@@ -9,6 +7,6 @@ textarea.form-control,
 input.form-control {
   font-size: 1rem;
 }
-input[type=file] {
+input[type="file"] {
   width: 100%;
 }
