--- a/src/Music.css
+++ b/src/Music.css
@@ -1,15 +1,11 @@
-h2{
-
-    color: white
+h2 {
+  color: white;
 }
 
-
-h3{
-
-    color: white
+h3 {
+  color: white;
 }
 
-p{
-
-    color: white
+p {
+  color: white;
 }
