--- a/src/containers/Homepage.css
+++ b/src/containers/Homepage.css
@@ -1,65 +1,71 @@
-.Home .lander {
-  padding: 80px 0;
-  text-align: center;
-}
+Home .lander {
+    padding: 80px 0;
+    text-align: center;
+  }
+  
+  .Home .lander h1 {
+    font-family: "Lucida Console", "Courier New", monospace;;
+    font-weight: 600;
+  }
+  
+  .list-group-item {
+    position: relative;
+    display: flex;
+  }
+  
+  h2 {
+    color: azure;
+  }
+  
 
-.Home .lander h1 {
-  font-family: "Open Sans", sans-serif;
-  font-weight: 600;
-}
-
-.list-group-item {
-  position: relative;
-  display: flex;
-}
-
-h1 {
-  color: azure;
-}
-
-.HomeCentered {
-  margin: auto;
-  width: 50%;
-  padding: 10px;
-}
-
-.words {
-  color: black;
-}
-
-.pagination-wrapper {
-  margin: auto;
-  width: 50%;
-  padding: 10px;
-}
+  p{
 
 
-
-.pagination {
-  margin: 15px auto;
-  display: flex;
-  list-style: none;
-  outline: none;
-}
-.pagination > .active > a{
-  background-color: #47ccde ;
-  border-color: #47ccde ;
-  color: #fff;
-}
-.pagination > li > a{
-  border: 1px solid #47ccde ;
-  padding: 5px 10px;
-  outline: none;
-  cursor: pointer;
-}
-.pagination > .active > a, .pagination > .active > span, .pagination > .active > a:hover, .pagination > .active > span:hover, .pagination > .active > a:focus, .pagination > .active > span:focus{
-  background-color: #47ccde ;
-  border-color: #47ccde;
-  outline: none ;
-}
-.pagination > li > a, .pagination > li > span{
-  color: #47ccde
-}
-.pagination > li:first-child > a, .pagination > li:first-child > span, .pagination > li:last-child > a, .pagination > li:last-child > span{
-  border-radius: unset
-}
+    font-family: "Lucida Console", "Courier New", monospace;
+  }
+  .HomeCentered {
+    margin: auto;
+    width: 50%;
+    padding: 10px;
+  }
+  
+  .words {
+    color: black;
+  }
+  
+  .pagination-wrapper {
+    margin: auto;
+    width: 50%;
+    padding: 10px;
+  }
+  
+  
+  
+  .pagination {
+    margin: 15px auto;
+    display: flex;
+    list-style: none;
+    outline: none;
+  }
+  .pagination > .active > a{
+    background-color: #47ccde ;
+    border-color: #47ccde ;
+    color: #fff;
+  }
+  .pagination > li > a{
+    border: 1px solid #47ccde ;
+    padding: 5px 10px;
+    outline: none;
+    cursor: pointer;
+  }
+  .pagination > .active > a, .pagination > .active > span, .pagination > .active > a:hover, .pagination > .active > span:hover, .pagination > .active > a:focus, .pagination > .active > span:focus{
+    background-color: #47ccde ;
+    border-color: #47ccde;
+    outline: none ;
+  }
+  .pagination > li > a, .pagination > li > span{
+    color: #47ccde
+  }
+  .pagination > li:first-child > a, .pagination > li:first-child > span, .pagination > li:last-child > a, .pagination > li:last-child > span{
+    border-radius: unset
+  }
