--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
- background-image: url("./images/3.jpeg");
+ background-image: url("./images/3.jpg");
  font-family: "Lucida Console", "Courier New", monospace;
 }
 
