--- a/src/containers/Homepage.css
+++ b/src/containers/Homepage.css
@@ -69,3 +69,12 @@ Home .lander {
   .pagination > li:first-child > a, .pagination > li:first-child > span, .pagination > li:last-child > a, .pagination > li:last-child > span{
     border-radius: unset
   }
+
+  .big-screen {
+    width: 600px;
+    height: 100px;
+    margin: 0 auto;  
+  }
+  .big-screen p {
+    padding-top: 2%;
+  }
