--- a/src/containers/musicplayerstyle.css
+++ b/src/containers/musicplayerstyle.css
@@ -1,9 +1,4 @@
 
-  
-  * {
-    box-sizing: border-box;
-  }
-  
   html {
     font-family: Arial, Helvetica, sans-serif;
     height: 100%;
@@ -36,6 +31,7 @@
     box-shadow: 0 28px 28px rgba(0, 0, 0, 0.2);
     margin: auto;
     color: var(--white);
+    background-color: greenyellow;
   }
   
   .artwork {
@@ -86,7 +82,7 @@
   
   .color-backdrop {
     background-color: yellowgreen;
-    position: absolute;
+    position: relative;
     top: 0;
     left: 0;
     right: 0;
