--- a/src/containers/Homepage.css
+++ b/src/containers/Homepage.css
@@ -71,7 +71,7 @@
     border-radius: unset
   }
 
-  .big-screen {
+  /* .big-screen {
     width: 600px;
     height: 100px;
 
@@ -79,4 +79,4 @@
   }
   .big-screen p {
     padding-top: 2%;
-  }
+  } */
