--- a/src/containers/Homepage.css
+++ b/src/containers/Homepage.css
@@ -80,3 +80,10 @@
   .big-screen p {
     padding-top: 2%;
   } */
+
+  .center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
